Bug 78910 - FILESAVE: [DOCX] File corrupts after RT
Summary: FILESAVE: [DOCX] File corrupts after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Vinaya Mandke
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 13:56 UTC by Vinaya Mandke
Modified: 2014-05-25 21:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Optimized file (22.07 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 13:58 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-05-19 13:56:02 UTC
Steps to Reproduce:
1. Open File in LO
2. Save as DOCX
3. Open Roundtrip file in MS Word 2010

XML: document.xml :-
The Field begins inside a hyperlink but ends after the hyperlink. This causes the corruption.
Comment 1 Vinaya Mandke 2014-05-19 13:58:41 UTC
Created attachment 99338 [details]
Optimized file
Comment 2 Joel Madero 2014-05-20 04:03:11 UTC
Did this problem exist in 4.2 also? Version should be the earliest version that we can confirm the problem not the latest it was tested on. 

I will try to test this once I have access to MSO. If I can get confirmation that it's a new problem I'll bibisect as well while I'm at it but that'll be a bit time consuming for this one so please let me know. Thanks!
Comment 3 Jorendc 2014-05-20 17:44:18 UTC
Repro, tested using Version: 4.3.0.0.alpha1+
Build ID: cd11bc699ac50af4f560ed5f2e5e7903de0898b8
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-05-20_08:02:54

(In reply to comment #2)
> Did this problem exist in 4.2 also? Version should be the earliest version
> that we can confirm the problem not the latest it was tested on. 

@Joel: No worries :-). This kind of fixes of Synerzip are mostly not backported to older branches, unless for some real shoking ones :-). So no need to bibisect it too (probably even not bibisectable due the fact LibreOffice did ignore it previously).
Comment 4 Vinaya Mandke 2014-05-21 03:56:37 UTC
Hi Joel, Joren,

@Joren thanks for always being so quick at verifying the bugs...

@Joel I'll also verify the issues on 4.2 as well and mention the same while reporting the issue. Thanks for pointing this out. Actually we usually work with the daily builds...

And as Joren mentioned there is no need to bibisect, and I have already started working on this...

Regards,
Vinaya Mandke
Comment 5 Commit Notification 2014-05-22 09:04:46 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c87d89bca61732cb2ee679e278863bd56bbdddd

fdo#78910 Hyperlink and Field start-end mismatch



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jorendc 2014-05-25 21:05:30 UTC
Looks fixed to me, tested using Windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: 16ba360f2a526654cedfcd4cda230442c3a8a522
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-25_07:43:52

Thanks!