fdo#78910 Hyperlink and Field start-end mismatch

Originally a Field began inside a hyperlink but ended after the hyperlink.
This causes the corruption in MS Word.

Incremented the field count if the field is added for the current new hyperlink.
Added another variable to store the Field-Count from previous hyperlink.

Added UT for the same.

Change-Id: Id3c3bee1c8ed9c0755f8fff7efd5d1c5662f2c82
Reviewed-on: https://gerrit.libreoffice.org/9421
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>